{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 18,
  "lineage": "b434ea15-514c-c434-3100-5d43b32312b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dotoryeee-EC2-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-00b598c942160ed3d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b598c942160ed3d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3a9cf8151f488f5",
            "private_dns": "ip-10-0-0-123.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.123",
            "public_dns": "ec2-52-79-84-17.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.84.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f7dcbc5e3d27a29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081a5c72369263275"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06921d11b2fd24bff",
            "tags": {
              "Name": "doto_EC2_01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081a5c72369263275"
            ]
          },
          "dependencies": [
            "aws_key_pair.practice_01",
            "aws_security_group.practice_01",
            "aws_subnet.public_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dotoryeee-EC2-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-0ef3a32fb48666816",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef3a32fb48666816",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057a7802501c74759",
            "private_dns": "ip-10-0-1-149.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-52-78-239-109.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.239.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef98424df4080b99",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081a5c72369263275"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e47c24baf596f320",
            "tags": {
              "Name": "doto_EC2_02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081a5c72369263275"
            ]
          },
          "dependencies": [
            "aws_key_pair.practice_01",
            "aws_security_group.practice_01",
            "aws_subnet.public_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:internet-gateway/igw-0f31a99243a4a038c",
            "id": "igw-0f31a99243a4a038c",
            "owner_id": "737382971423",
            "tags": {
              "Name": "igw_practice_01"
            },
            "vpc_id": "vpc-060bb2dc6909cc8c6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_sub_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f31a99243a4a038c",
            "id": "r-rtb-02c198492cbefcf591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c198492cbefcf59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02c198492cbefcf59",
            "owner_id": "737382971423",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f31a99243a4a038c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-060bb2dc6909cc8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_01_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ffed26e7a56b30d",
            "route_table_id": "rtb-02c198492cbefcf59",
            "subnet_id": "subnet-06921d11b2fd24bff"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_02_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0303451b48944447f",
            "route_table_id": "rtb-02c198492cbefcf59",
            "subnet_id": "subnet-0e47c24baf596f320"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_02",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "practice_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:security-group/sg-081a5c72369263275",
            "description": "SG_for_EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open all port from anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081a5c72369263275",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open SSH from Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "practice_01_SG",
            "name_prefix": "",
            "owner_id": "737382971423",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-060bb2dc6909cc8c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-06921d11b2fd24bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06921d11b2fd24bff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737382971423",
            "tags": {
              "Name": "public_subnet_01"
            },
            "vpc_id": "vpc-060bb2dc6909cc8c6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-0e47c24baf596f320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e47c24baf596f320",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737382971423",
            "tags": {
              "Name": "public_subnet_02"
            },
            "vpc_id": "vpc-060bb2dc6909cc8c6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:vpc/vpc-060bb2dc6909cc8c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01bd9b080524c5bbb",
            "default_route_table_id": "rtb-00435d66ec42a8cfb",
            "default_security_group_id": "sg-0bfbd7907d6ff48d5",
            "dhcp_options_id": "dopt-7ca0c217",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-060bb2dc6909cc8c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00435d66ec42a8cfb",
            "owner_id": "737382971423",
            "tags": {
              "Name": "vpc_practice_01"
            }
          }
        }
      ]
    }
  ]
}